--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Video Streaming Demonstration</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="static/css/stylish-portfolio.min.css" rel="stylesheet">
+
+
+
   </head>
-  <body style="font-family: 'Lato', sans-serif;">
-    <center>
-      <h1>Video streaming using Flask and OpenCV</h1>
-      <img id="bg" src="{{ url_for('video_feed') }}" width="65%">
-    </center>
+  <body id="page-top">
+    <!-- Navigation -->
+
+
+    <!-- Header -->
+    <header class="masthead d-flex">
+      <div class="container text-center my-auto">
+        <h1 class="mb-1">VRPZ traffic analytics</h1>
+        <h3 class="mb-5">
+          <em>Vial segurity</em>
+        </h3>
+        <h6 class="mb-0">José Joaquin Zubieta Rico. Jorge Miguel Valles Silva. Miguel Ruiz Ortiz. Aylín Aribel Pérez Moriel</h6>
+      </div>
+      <div class="overlay"></div>
+    </header>
+
+    <!-- About -->
+    <section class="content-section bg-light" id="about">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h2>Un servicio para mejorar la seguridad vial</h2>
+            <p class="lead mb-5">Es un servicio desarrollado para mejorar la seguridad vial a traves de metodos de
+            reconocimiento de objetos para presentar una forma nueva de agilizar el trafico y evitar accidentes viales.
+            Una idea de 
+              <a href="http://www.verizonenterprise.com/products/internet-of-things/smart-cities/intelligent-traffic-management/">Verizon Intelligent Traffic Managment</a> adaptado a nuevas necesidades.</p>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Que ofrecemos</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section class="content-section bg-primary text-white text-center" id="services">
+      <div class="container">
+        <div class="content-section-heading">
+          <h3 class="text-secondary mb-0">Servicios</h3>
+          <h2 class="mb-5">Que ofrecemos</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-folder"></i>
+            </span>
+            <h4>
+              <strong>Analisis</strong>
+            </h4>
+            <p class="text-faded mb-0">Analizamos datos estadisicamente para mejorar el flujo vial</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-clock"></i>
+            </span>
+            <h4>
+              <strong>Rapidez</strong>
+            </h4>
+            <p class="text-faded mb-0">Podemos tener los resultados en dos meses</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-eye"></i>
+            </span>
+            <h4>
+              <strong>Seguridad</strong>
+            </h4>
+            <p class="text-faded mb-0">Se reducen los accidentes viales</p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-microphone"></i>
+            </span>
+            <h4>
+              <strong>Alertar</strong>
+            </h4>
+            <p class="text-faded mb-0">Podemos saber si trailers pasan por calles no permitidas para ese tipo de vehiculo</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Callout -->
+    <section class="callout">
+      <div class="container text-center">
+        <h3 class="mx-auto mb-5">Saluda al 
+          <em>innovador</em>
+          metodo que te permite mejorar el flujo vial de forma eficiente y segura a partir de avanadas tecnologias</h3>
+      </div>
+    </section>
+
+
+    <!-- Map 
+    <section id="contact" class="map">
+      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+      <br/>
+      <small>
+        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+      </small>
+    </section> -->
+
+    <!-- Footer 
+    <footer class="footer text-center">
+      <div class="container">
+        <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i class="icon-social-facebook"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i class="icon-social-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white" href="#">
+              <i class="icon-social-github"></i>
+            </a>
+          </li>
+        </ul>
+        <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
+      </div>
+    </footer>  -->
+
+
+
+    <div class="container">
+      <center>
+        <h1>Video streaming using Flask and OpenCV</h1>
+        <h3>Demo:</h3>
+        <img id="bg" src="{{ url_for('video_feed') }}" width="65%">
+      </center>
+    </div>
+
+    <section class="content-section bg-light" id="about">
+      <div class="container">
+        <div class="content-section-heading">
+        </div>
+    </section>
+
+         
+      </div>
+    </div>
+
+
+
+
   </body>
 </html>
+
+
+
+
+
