Third trial w/Heroku.

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,11 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h1 class="mb-1">VRPZ traffic analytics</h1>
+        <h1 class="mb-1">VRPZ Traffic Analytics</h1>
         <h3 class="mb-5">
           <em>Vial segurity</em>
         </h3>
+        <h6 class="mb-0">Development by</h6>
         <h6 class="mb-0">José Joaquin Zubieta Rico. Jorge Miguel Valles Silva. Miguel Ruiz Ortiz. Aylín Aribel Pérez Moriel</h6>
       </div>
       <div class="overlay"></div>
@@ -44,10 +45,10 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Un servicio para mejorar la seguridad vial</h2>
-            <p class="lead mb-5">Es un servicio desarrollado para mejorar la seguridad vial a traves de metodos de
-            reconocimiento de objetos para presentar una forma nueva de agilizar el trafico y evitar accidentes viales.
+            <p class="lead mb-5">Desarrollado para mejorar la seguridad vial a traves de métodos de
+            reconocimiento de objetos para presentar una forma nueva de agilizar el tráfico y evitar accidentes viales.
             Una idea de 
-              <a href="http://www.verizonenterprise.com/products/internet-of-things/smart-cities/intelligent-traffic-management/">Verizon Intelligent Traffic Managment</a> adaptado a nuevas necesidades.</p>
+              <a href="http://www.verizonenterprise.com/products/internet-of-things/smart-cities/intelligent-traffic-management/">Verizon Intelligent Traffic Managment</a> adaptado a nuevas necesidades y ambientes distintos.</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Que ofrecemos</a>
           </div>
         </div>
@@ -69,7 +70,7 @@
             <h4>
               <strong>Analisis</strong>
             </h4>
-            <p class="text-faded mb-0">Analizamos datos estadisicamente para mejorar el flujo vial</p>
+            <p class="text-faded mb-0">Analisis estadístico de datos para mejorar el flujo vial</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -78,7 +79,7 @@
             <h4>
               <strong>Rapidez</strong>
             </h4>
-            <p class="text-faded mb-0">Podemos tener los resultados en dos meses</p>
+            <p class="text-faded mb-0">Somos capaces de entregar resultados en tiempo record (menos de dos meses)</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
