--- a/static/css/stylish-portfolio.css
+++ b/static/css/stylish-portfolio.css
@@ -358,6 +358,10 @@ a:hover, a:focus, a:active {
   background-color: #1D809F !important;
 }
 
+.bg-secondary {
+  background-color: #128090 !important;
+}
+
 .text-primary {
   color: #1D809F !important;
 }
