Third trial w/Heroku.

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,9 +95,9 @@
               <i class="icon-microphone"></i>
             </span>
             <h4>
-              <strong>Alertar</strong>
+              <strong>Avisos</strong>
             </h4>
-            <p class="text-faded mb-0">Podemos saber si trailers pasan por calles no permitidas para ese tipo de vehiculo</p>
+            <p class="text-faded mb-0">Tenemos la tecnología para reconocer entre un carro y un trailer y podemos ver si un vehiculo grande usa calles no aptas para su uso.</p>
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
       <div class="container text-center">
         <h3 class="mx-auto mb-5">Saluda al 
           <em>innovador</em>
-          metodo que te permite mejorar el flujo vial de forma eficiente y segura a partir de avanadas tecnologias</h3>
+          método que te permite mejorar el flujo vial de forma eficiente y segura a partir de avanzadas tecnologías</h3>
       </div>
     </section>
 
