--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
           <em>Vial segurity</em>
         </h3>
         <h6 class="mb-0">Development by</h6>
-        <h6 class="mb-0">José Joaquin Zubieta Rico. Jorge Miguel Valles Silva. Miguel Ruiz Ortiz. Aylín Aribel Pérez Moriel</h6>
+        <h6 class="mb-0">José Joaquin Zubieta Rico. Jorge Miguel Valles Silva. Miguel Ángel Ruiz Ortiz. Aylín Aribel Pérez Moriel</h6>
       </div>
       <div class="overlay"></div>
     </header>
@@ -106,9 +106,9 @@
     <!-- Callout -->
     <section class="callout">
       <div class="container text-center">
-        <h2 class="mx-auto mb-5">Saluda al 
+        <h3 class="mx-auto mb-5">Saluda al 
           <em>innovador</em>
-          método que te permite mejorar el flujo vial de forma eficiente y segura a partir de avanzadas tecnologías</h2>
+          método que te permite mejorar el flujo vial de forma eficiente y segura a partir de avanzadas tecnologías</h3>
       </div>
     </section>
 
